--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,20 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.ioannuwu.intellijerrors</id>
-    <name>IntelliJ Platform Plugin IntelliJ-errors</name>
+    <name>Among Us</name>
     <vendor>ioannuwu</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.ioannuwu.intellijerrors.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.ioannuwu.intellijerrors.services.MyProjectService"/>
+        <applicationConfigurable parentId="appearance"
+                                 instance="com.ioannuwu.inline.ui.MyConfigurable"
+                                 displayName="Among Us"/>
+        <applicationService serviceImplementation="com.ioannuwu.inline.data.MySettingsService"/>
     </extensions>
 
-    <applicationListeners>
-        <listener class="com.github.ioannuwu.intellijerrors.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
+    <projectListeners>
+        <listener class="com.ioannuwu.inline.domain.EditorOpenedListener"
+                  topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+    </projectListeners>
 </idea-plugin>
