--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pluginGroup = com.github.ioannuwu.inline
 pluginName = InLine
 pluginRepositoryUrl = https://github.com/IoaNNUwU/InLine
 # SemVer format -> https://semver.org
-pluginVersion = 0.1
+pluginVersion = 1.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 213
@@ -27,4 +27,4 @@ kotlin.stdlib.default.dependency = false
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 # suppress inspection "UnusedProperty"
-org.gradle.unsafe.configuration-cache = true
+org.gradle.unsafe.configuration-cache = false
