huge rewrite in kotlin becouse why not

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
     </extensions>
 
     <projectListeners>
-        <listener class="com.ioannuwu.inline.domain.EditorOpenedListener"
+        <listener class="com.ioannuwu.inline.EditorOpenedListenerKt"
                   topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
     </projectListeners>
 </idea-plugin>
