Support last idea version
- Support for all previous versions dropped before 2023.1

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
     </extensions>
 
     <projectListeners>
-        <listener class="com.ioannuwu.inline.EditorOpenedListenerKt"
-                  topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+        <listener class="com.ioannuwu.inline.FileOpenedListener"
+                  topic="com.intellij.openapi.fileEditor.FileOpenedSyncListener"/>
     </projectListeners>
 </idea-plugin>
