--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /opt/ghc
 
+      - name: Cleanup
+        run: ./gradlew clean
+
       - name: Fetch Sources
         uses: actions/checkout@v3
 
