--- a/.github/workflows/runPluginVerifier.yml
+++ b/.github/workflows/runPluginVerifier.yml
@@ -16,7 +16,7 @@ jobs:
           key: plugin-verifier-${{ hashFiles('build/listProductsReleases.txt') }}
 
       - name: Run Plugin Verification tasks
-        run: ./gradlew runPluginVerifier -Dplugin.verifier.home.dir=${{ steps.properties.outputs.pluginVerifierHomeDir }}
+        run: ./gradlew runPluginVerifier --stacktrace
 
       - name: Collect Plugin Verifier Result
         if: ${{ always() }}
