--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,2 +1,7 @@
-version: "1.0"
-linter: jetbrains/qodana-jvm-community:2022.3
+version: 1.0
+profile:
+  name: qodana.recommended
+exclude:
+  - name: All
+    paths:
+      - .qodana
